build_core_2.txt
   Compiling deve_core v0.0.1 (E:\gitclone\Deve-Note\crates\core)
error[E0599]: no variant or associated item named `new` found for enum `FileId` in the current scope
   --> crates\core\src\vfs.rs:25:31
    |
 25 |         let file_id = FileId::new(&full_path)?;
    |                               ^^^ variant or associated item not found in `FileId`
    |
note: if you're trying to build a new `FileId` consider using one of the following associated functions:
      FileId::new_inode
      FileId::new_low_res
      FileId::new_high_res
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\file-id-0.2.3\src\lib.rs:87:5
    |
 87 |     pub fn new_inode(device_id: u64, inode_number: u64) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 94 |     pub fn new_low_res(volume_serial_number: u32, file_index: u64) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
101 |     pub fn new_high_res(volume_serial_number: u64, file_id: u128) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name
    |
 25 -         let file_id = FileId::new(&full_path)?;
 25 +         let file_id = FileId::ne(&full_path)?;
    |

warning: unused variable: `doc_id`
  --> crates\core\src\watcher.rs:88:25
   |
88 |             if let Some(doc_id) = self.ledger.get_docid(path_str)? {
   |                         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_doc_id`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `deve_core` (lib) generated 1 warning
error: could not compile `deve_core` (lib) due to 1 previous error; 1 warning emitted
